<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/my_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/backspace_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backspace_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />
        <Button
            android:id="@+id/change_sign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_sign_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_button" />
        <Button
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_button" />
        <Button
            android:id="@+id/three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_button" />
        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_button" />
        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_button" />
        <Button
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_button" />
        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_button" />
        <Button
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_button" />
        <Button
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_button" />
        <Button
            android:id="@+id/substract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substract_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_button" />
        <Button
            android:id="@+id/comma_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma_button" />
        <Button
            android:id="@+id/equals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_button" />
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button" />
    </LinearLayout>
</LinearLayout>