<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/calculator_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/calculator"/>
    <Button
        android:id="@+id/simple_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/simple" />
    <Button
        android:id="@+id/advanced_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/advanced" />
    <Button
        android:id="@+id/about_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about" />
    <Button
        android:id="@+id/exit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit" />
</LinearLayout>